# manim_ex

./: README.md  lookup.py  main.py  pyproject.toml  test.py
media/Tex/: 006351181c5aefa3.tex  02b505198b3d4fdf.tex  044465ed7ce7bb68.tex  059e68fa350df8c2.tex  05e14a94dba73b68.tex  0831cc80b24c31db.tex  0a2ab23578293144.tex  0c021a117c4730f3.tex  0e5fbc60a1fae532.tex  166d38c349aec98f.tex  16a8728e42a53f0d.tex  17dcc01b72e50cf1.tex  191e7a934e598d38.tex  199c1b48411752c6.tex  1a9de3ce4b1d4ac9.tex  1ad8862f9074d21c.tex  2215c8ac44737a26.tex  2890e825fbd4081f.tex  2a6da174542423d4.tex  2c3fc23c7fee6994.tex  2ccb18e6bb50ce74.tex  2faffa81810a3105.tex  31c1ed2725501139.tex  335f91553815a62d.tex  3405e250d172896c.tex  345a9a8874146bf1.tex  38a4a175f636e972.tex  3aba0907cfc46e6b.tex  3c52d0ab1f34cec8.tex  3c71d6ebb63bbdf8.tex  3ec9db4f9bab2b46.tex  3ff7c0688dcdb909.tex  436b2c18790d2f81.tex  436c81064bfef71c.tex  452e2adb1873488c.tex  49f4e30343442238.tex  4ac74c8c53c17f30.tex  4ad6d893a0a5245d.tex  4b5969b97dd55043.tex  4d9a02b94775f0a7.tex  (+97 more)
media/videos/main/480p15/: parts
media/videos/main/480p15/partial_movie_files/CirclesAndEllipses/: partial_movie_file_list.txt
media/videos/main/480p15/partial_movie_files/Conclusion/: partial_movie_file_list.txt
media/videos/main/480p15/partial_movie_files/ContinuousMotion/: partial_movie_file_list.txt
media/videos/main/480p15/partial_movie_files/DrawFunction/: partial_movie_file_list.txt
media/videos/main/480p15/partial_movie_files/EnergyFieldsTakeTwoCut/: partial_movie_file_list.txt
(+21 files in other folders)
